# crypto-strategy-analysis

./: Cargo.toml  NOTES.md  NOTES_VK.md  README.md  rustfmt.toml
my_macros/: Cargo.toml
my_macros/src/: lib.rs
src/: account.rs  data.rs  indicators.rs  main.rs  traders.rs
src/data/: binance.rs
src/indicators/: dca.rs  hodl.rs  sma.rs  sma2.rs
src/traders/: generic_trader.rs  hodl_trader.rs  macd_trader.rs  sma2_trader.rs  sma_trader.rs
