[package]
name = "crypto-strategy-analysis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yata = "~0.7.0"
reqwest = "~0.12.24"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
zip = "~6.0.0"
chrono = "~0.4.42"
tempfile = "~3.23.0"
log = "~0.4.14"
env_logger = "~0.11.8"
futures = "0.3.31"
anyhow = "1.0.100"
my_macros = { path = "./my_macros" }

[profile.release]
opt-level = 3      # Maximum optimisation
lto = true         # Link Time Optimisation
codegen-units = 1  # Better optimisation, slower compile
strip = true       # Remove debug symbols for smaller binary
panic = 'abort'    # Changes the panic strategy from the default unwind to abort - no resource release on exception
debug = false      # Disables debug info generation - harder to debug